Sun Oct 24 21:27:57 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/_ACE_TAO_CIAO.build:

          Removed obsolete portions of the script.

        * integration/autobuild.build:

          Fixed generalizations in the build script.

        * integration/include/MPC/vc8.build:
        * integration/include/MPC/vc9.build:

          Fixed errors in the build scripts.

Sat Oct 23 22:21:08 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Context_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Context_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Impl_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Context_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Context_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Source_Impl_Generator.cpp:

          Fixed compilation errors with the StockQuoter example.

Sat Oct 23 14:32:14 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Impl_Generator_T.cpp:

          Removed dead code.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_algorithm.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_algorithm.cpp:

          Implemented get_pathname (), which returns the pathname of the
          specified file.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/CIAO_Generators.h:

          Fixed include statements.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Component_Impl_Generator.h: